--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ ul li{
 .cart{
   font-size: 1.3rem;
   margin-left: 0.8rem;
-  color: #4169E1;
+  color: #4E4FFA;
 }
 .cart-power {
   font-weight: 600;
@@ -63,11 +63,23 @@ ul li{
   text-decoration: none;
   font-weight: 600;
 }
+.logout-btn {
+  width: 6rem;
+  font-size: 1.2rem;
+  height: 2.2rem;
+  font-weight: 550;
+  margin-top: 0.4rem;
+  margin-left: 1rem;
+  border: none;
+  color: #FFFFFF;
+  background-color: #4E4FFA;
+}
 
 /* hero-section */
 .hero-div {
   margin-top: 1.5rem;
   margin-top: 0;
+  overflow: hidden;
 }
 .hero-img {
   height: 100vh;
@@ -247,7 +259,7 @@ i {
 /* trusted */
 .trusted-div {
   width: 100vw;
-  height: 25rem;
+  height: auto;
   background-color: #F8F9FB;
 }
 .brand-div {
@@ -647,6 +659,67 @@ form{
   font-weight: 700;
 }
 
+/* registration */
+.register-div {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #F8F8F8;
+}
+.reg-form {
+  width: 60%;
+  height: 85vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 0.75rem;
+}
+.reg-head {
+  color: #222222;
+  font-size: 2.25rem;
+  text-align: left;
+  font-weight: 750;
+}
+.reg-input {
+  margin-top: 1.2rem;
+  border: none;
+  border-bottom: 1px solid black;
+  padding-left: 1.5rem;
+  font-size: 0.95rem;
+}
+::placeholder {
+  opacity: 0.8;
+  color: #222222;
+}
+.reg-icon {
+  color: #222222;
+  position: absolute;
+  top: 2.15rem;
+  font-size: 0.8rem;
+}
+.reg-btn {
+  width: 85%;
+}
+.reg-error-msg {
+  width: 85%;
+  margin-left: 0;
+}
+.reg-bold {
+  font-weight: 550;
+}
+.reg-checkbox {
+  width: 85%;
+  text-align: left;
+  margin-top: 1rem;
+  color: #222222;
+}
+.reg-img {
+  width: 100%;
+}
+
+
 /* responsive for mobile */
 
 @media (max-width: 767px) {
@@ -681,7 +754,7 @@ nav {
   top: 5.5rem;
   left: 0;
   width: 100vw;
-  height: 15rem;
+  height: 19rem;
   overflow-y: hidden;
   transition: height 0.3s ease-in-out;   
 }
@@ -691,6 +764,9 @@ nav {
 } 
 .nav-link {
   margin-left: 1rem;
+}
+.logout-btn {
+  margin-top: 1.2rem;
 }
 
 /* hero-section */
@@ -931,6 +1007,37 @@ nav {
   margin-left: auto;
   margin-right: 5%;
 }
+
+/* registration */
+.register-div {
+  height: auto;
+  padding: 5vw 0;
+}
+.reg-form {
+  width: 90%;
+  height: auto;
+  padding: 0 0 0 1rem;
+}
+.reg-head {
+  font-size: 1.75rem;
+  margin: 0;
+}
+.reg-input {
+  margin-top: 0.5rem;
+  height: 2.4rem;
+}
+.reg-icon {
+  top: 1.2rem;
+}
+.reg-error-msg {
+  width: 95%;
+}
+.reg-checkbox {
+  width: 95%;
+}
+.redirect {
+  display: block;
+}
 }
 
 /* responsive for tab */
@@ -966,7 +1073,7 @@ nav {
   top: 5.5rem;
   left: 0;
   width: 100vw;
-  height: 15rem;
+  height: 19rem;
   overflow-y: hidden;
   transition: height 0.3s ease-in-out;   
 }
@@ -976,6 +1083,9 @@ nav {
 } 
 .nav-link {
   margin-left: 1rem;
+}
+.logout-btn {
+  margin-top: 1.2rem;
 }
 
 /* hero-section */
@@ -1153,6 +1263,22 @@ nav {
   margin-left: auto;
   margin-right: 10%;
 }
+
+/* registration */
+.reg-form {
+  width: 90%;
+  padding: 0 0 0 1.5rem;
+}
+.reg-head {
+  font-size: 2rem;
+}
+.reg-input {
+  margin-top: 0.75rem;
+  height: 2.4rem;
+}
+.reg-icon {
+  top: 1.45rem;
+}
 }
 
 /* very small screen */
@@ -1177,5 +1303,11 @@ nav {
     flex-direction: row!important;
     align-items: center!important;
     gap: 1rem;
+  }
+}
+
+@media (min-width: 993px) and (max-width: 1200px){
+  .reg-form {
+    width: 72%;
   }
 }
